# web3-social

./: .env  Cargo.toml  LICENSE  README.en.md  README.md  we3-social  we3-social.pub
migrations/: 20230901000000_initial_schema.sql
src/: main.rs  schema.rs
src/api/: asset.rs  auth.rs  comment.rs  mod.rs  post.rs  user.rs
src/blockchain/: ethereum.rs  mod.rs  solana.rs
src/config/: mod.rs  rbatis_config.rs
src/middlewares/: auth.rs  mod.rs  rate_limit.rs
src/models/: asset.rs  auth.rs  comment.rs  mod.rs  post.rs  rbatis_entities.rs  user.rs
src/services/: asset_service.rs  content_service.rs  mod.rs  storage_service.rs  user_service.rs
src/utils/: arweave.rs  crypto.rs  error.rs  ipfs.rs  jwt.rs  mod.rs  pagination.rs
