[package]
name = "web3-social-backend"
version = "0.1.0"
edition = "2021"
authors = ["Web3 Social Team"]
description = "基于web3的社交匿名财富交流平台后端服务"

# 通过增量编译机制自动跳过未修改文件
# 可减少约 30-50% 的编译时间
[profile.dev]
incremental = true  # 启用增量编译
codegen-units = 1   # 减少并行编译单元


[dependencies]
# Web框架
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.7.1"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }

# Web3相关
ethers = { version = "2.0.13", features = ["rustls"] }
web3 = "0.19.0"
solana-client = "2.2.0"
solana-sdk = "2.2.0"
ethers-signers = "2.0.0"


# 加密和安全
jsonwebtoken = "8.3"
sha2 = "0.10"
hex = "0.4"
rand = "0.9.0"

# 存储相关
ipfs-api-backend-hyper = "0.6" # IPFS交互
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"] }

# 缓存
redis = { version = "0.23.0", features = ["tokio-comp"] }

# 日志和配置
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
config = "0.13"

# 实用工具
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.25", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
lazy_static = "1.4"
base64 = "0.21.0"

# 可选：AI内容过滤
rust-bert = "0.20.0"

[dev-dependencies]
tokio-test = "0.4"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"